# gay-wave-trail

./: .clang-format  .clangd  .env  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  about.md  build-windows.fish  compile_flags.txt  docker-compose.yml  editvers.sh  mod.json  setup.lua  support.md  the_bearodactyl.gay-wave-trail.geode
.github/workflows/: docker-build.yml  multi-platform.yml
include/: color.hpp  color_serialize.hpp
include/gay/: api.hpp  color.hpp  constants.hpp  geometry.hpp  setting_defs.hpp  settings.hpp  types.hpp  utils.hpp
include/gay/customization/: rainbow.hpp
include/gay/settings/: color_list.hpp  gay_settings.hpp
include/gay/types/: color.hpp
include/gay/ui/: color_cell.hpp  color_popup.hpp  settings_popup.hpp
include/gay/utils/: color_utils.hpp  extensions.hpp  hex_utils.hpp  misc.hpp  trand.hpp
scripts/: gen_compile_commands_for_nvim.ps1  post-commit.sh  pre-commit.sh
scripts/for_linux/: build-windows.fish  build-windows.sh
scripts/for_windows/: gen_compile_commands_for_nvim.ps1
src/: Utils.hpp  api.cpp  color.cpp  constants.hpp  eclipse.cpp  geometry.cpp  includes.hpp  main.cpp  pause_button.cpp  rainbow_trail.cpp  settings.cpp  solid_trail.cpp  ui.cpp
src/customization/: combined_effects_manager.cpp  dashing_trail.cpp  editor_trail.cpp  music_sync.cpp  persist_wave_trail.cpp  player_color_separation.cpp  trail_brightness.cpp  trail_fade.cpp  trail_outline.cpp  trail_segments.cpp  trail_size.cpp  trail_thickness_variation.cpp
src/hooks/: trail_color.cpp  trail_persist.cpp  trail_render.cpp  trail_rewrite.cpp  trail_shape.cpp
src/hooks/trail_rewrite/: trail_rewrite.cpp  trail_ring.cpp  trail_worker.cpp
src/settings/: color_list.cpp  color_list.hpp  gay_settings.hpp  list_cell.cpp  list_cell.hpp  multi_string_setting.cpp  multi_string_setting.hpp  section.cpp  section.hpp
src/settings/color_list/: color_list_setting.cpp  color_list_setting.hpp
src/trail_customization/: chaos_trail.cpp  dashing_trail.cpp  disable_trail.cpp  editor_trail.cpp  persist_wave_trail.cpp  rainbow_trail.cpp  rainbow_trail.hpp  solid_trail.cpp  trail_outline.cpp  trail_size.cpp  trail_tilt.cpp  wave_trail_shadow.cpp
src/types/: color.hpp  color_serialize.hpp  serializable_vector.hpp
src/ui/: color_cell.cpp  color_cell.hpp  color_popup.cpp  color_popup.hpp  colors_popup.cpp  colors_popup.hpp  grid_cell.cpp  grid_cell.hpp  pause_button.cpp  pause_layer.cpp  section_header.cpp  settings_popup.cpp  settings_row.cpp
src/utils/: color_utils.cpp  color_utils.hpp  hex_utils.cpp  hex_utils.hpp  ordered_vec.cpp  ordered_vec.hpp  serializable_vector.hpp
tools/rust/colortools/: Cargo.toml
tools/rust/colortools/src/: color_utils.rs  lib.rs  rainbow_trail.rs
