cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
# set(GEODE_BINDINGS_REPO_PATH "D:\\Projects\\gay-wave-trail\\bindings\\")

project(gay-wave-trail VERSION 1.0.0)

file(
  GLOB_RECURSE
  SOURCES
  src/*.cpp
  src/utils/*.cpp
  src/trail_customization/*.cpp
  src/settings/*.cpp
  src/ui/*.cpp
  src/types/*.cpp
)

add_library(${PROJECT_NAME} SHARED ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC include src)

if(NOT DEFINED ENV{GEODE_SDK})
  message(
    FATAL_ERROR
      "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode"
  )
else()
  message(STATUS "Found Geode: $ENV{GEODE_SDK}")
endif()

add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)

setup_geode_mod(${PROJECT_NAME})
